--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<h1>Welcome to Midgardstudios.net</h1>
+		<p>A project of <a href="https://dynecore.com">dynecore.com</a></p>
 	</body>
 </html>
